Remove Vercel configuration
